# EpollEventManager

./: CMakeLists.txt  EpollEventManager.h  README.md  checks.json
include/: EEMDirectiveAndWorkerDispatchPrep.hpp  EpollEventManager.h  EpollEventManager.hpp  SoftwareTimer.hpp
unit_tests/: BasicTests.cpp  CMakeLists.txt  EEMTestResult.hpp  EventFileDescriptor.hpp  SoftwareTimerTests.cpp
